generate modifiable list